# algorithmic_problems

./: .gitignore  CMakeLists.txt  binary_tree_1.cpp  dinamic_1d_1_fib_.cpp  dinamic_1d_2.cpp  dinamic_1d_3.cpp  dinamic_1d_4.cpp  dinamic_2d_1.cpp  dinamic_2d_2.cpp  dinamic_2d_3.cpp  greedy_algorithm_1.cpp  hash_map_1.cpp  lcm_gcd.cpp  linear_search_1.cpp  prime_numbers.cpp  stack_1.cpp  two_pointers_1.cpp  two_pointers_2.cpp  two_pointers_3.cpp
design/: design_1.cpp  design_10.cpp  design_2.cpp  design_3.cpp  design_4.cpp  design_5.cpp  design_6.cpp  design_7.cpp  design_8.cpp  design_9.cpp
dp/: dinamic_1d_1.cpp  dinamic_1d_2.cpp  dinamic_1d_3.cpp  dinamic_1d_4.cpp  dinamic_2d_1.cpp  dinamic_2d_2.cpp  dinamic_2d_3.cpp  dp_1.cpp  dp_2.cpp  dp_3.cpp  dp_4.cpp
graph/: CMakeLists.txt  graph_1.cpp  graph_10.cpp  graph_11.cpp  graph_12.cpp  graph_13.cpp  graph_2.cpp  graph_3.cpp  graph_4.cpp  graph_5.cpp  graph_6.cpp  graph_7.cpp  graph_8.cpp  graph_9.cpp
linear_search/: interv_1.cpp  interv_2.cpp  l_r_10.cpp  l_r_11.cpp  l_r_12.cpp  l_r_3.cpp  l_r_4.cpp  l_r_5.cpp  l_r_6.cpp  l_r_7.cpp  l_r_8.cpp  l_r_9.cpp  l_se_10.cpp  l_se_11.cpp  l_se_12.cpp  l_se_13.cpp  l_se_3.cpp  l_se_4.cpp  l_se_5.cpp  l_se_6.cpp  l_se_7.cpp  l_se_8.cpp  l_se_9.cpp  linear_search_1.cpp  linear_search_2.cpp  pref_1.cpp  pref_2.cpp
math/: math_1.cpp  math_10.cpp  math_11.cpp  math_12.cpp  math_2.cpp  math_3.cpp  math_4.cpp  math_6.cpp  math_9.cpp
mix/: graph_8.cpp  queue_1.cpp  stack_2.cpp  stack_3.cpp  stack_4.cpp
number_theory/: mnozhchisl_01.cpp
string_/: string_1.cpp  string_2.cpp  (+6 more)
(+8 files in other folders)
